# docker

./: README.md
src/: Dockerfile
src/shop_api/: pyproject.toml
src/shop_api/shop_api/: main.py
