[tool.poetry]
name = "shop-api"
version = "0.1.0"
description = ""
authors = ["Eron Cemal <eron.cemal@faculty.ai>"]
readme = "README.md"
packages = [{include = "shop_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.5.3"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
